--- a/tests/css/index.html
+++ b/tests/css/index.html
@@ -15,17 +15,19 @@
 <body>
 
 <header>
-  <div class="btn btn-drawer" id="drawer-toggle">
-    <i class="material-icons">menu</i>
+  <div class="nav-wrap">
+    <div class="btn btn-drawer" id="drawer-toggle">
+      <i class="material-icons">menu</i>
+    </div>
+    <div class="nav-main-wrap">
+      <nav class="nav-main" role="navigation">
+        <ul>
+          <li><a href="#" class="nav-link">Hepper</a></li>
+          <li><a href="#" class="nav-link" aria-selected="true">Hepper2</a></li>
+        </ul>
+      </nav>
+    </div>
   </div>
-  <div class="nav-main-wrap">
-    <nav class="nav-main" role="navigation">
-      <ul>
-        <li><a href="#">Hepper</a></li>
-      </ul>
-    </nav>
-  </div>
-
   <div class="drawer" id="drawer-toggle-drawer">
     <nav class="drawer-navigation">
       <a href="#" class="drawer-navigation-link">Hepper</a>
