--- a/tests/css/index.html
+++ b/tests/css/index.html
@@ -36,18 +36,21 @@
 </header>
 
 <main class="content">
-  <div class="row colored">
-    <div class="col--1">1</div>
-    <div class="col--2">2</div>
-    <div class="col--9">9</div>
+  <div class="row">
+    <div class="col--1">
+      <h1>Grid</h1>
+    </div>
   </div>
   <div class="row colored">
     <div class="col--1">1</div>
     <div class="col--2">2</div>
     <div class="col--9">9</div>
   </div>
-
-
+  <div class="row colored">
+    <div class="col--1">1</div>
+    <div class="col--2">2</div>
+    <div class="col--9">9</div>
+  </div>
 
   <div class="row colored">
     <div class="col--3">3</div>
@@ -66,6 +69,11 @@
   </div>
 
   <div class="row">
+    <div class="col--12">
+      <h1>Card</h1>
+    </div>
+  </div>
+  <div class="row">
     <div class="col--6">
       <div class="card">6</div>
     </div>
@@ -83,6 +91,11 @@
     </div>
   </div>
 
+  <div class="row">
+    <div class="col--12">
+      <h1>Button</h1>
+    </div>
+  </div>
   <div class="row">
     <div class="col--12">
       <button class="btn btn-raised">Raised</button>
